batch.cf.yml

AWSTemplateFormatVersion: 2010-09-09
# https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/cfn-resource-specification.html?tag=duckduckgo-d-20
Description: 
  VPC & AWS Batch
Parameters:
  AppId:
    Description:  App Id 
    Type: String
    Default: MyApp
  KeyPair:
    Description: Key Pair
    Type: AWS::EC2::KeyPair::KeyName

#kyorohiro-works
Resources:
  AppVpc:
   # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc.html
   Type: AWS::EC2::VPC
   Properties:
     CidrBlock: 10.0.0.0/16
     EnableDnsSupport: true
     EnableDnsHostnames: true
     InstanceTenancy: default
     Tags:
        - Key: Name
          Value: !Ref AppId

  AppPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AppVpc
      Tags:
        - Key: Name
          Value: !Ref AppId

  AppPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref AppVpc
      AvailabilityZone: "ap-northeast-1a"
      Tags:
        - Key: Name
          Value: !Ref AppId

  AppPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AppPublicRouteTable
      SubnetId: !Ref AppPublicSubnetA

  AppInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref AppId

  AppAtachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AppVpc
      InternetGatewayId: !Ref AppInternetGateway

  AppRoute:
    Type: AWS::EC2::Route
    DependsOn: AppInternetGateway
    Properties:
      RouteTableId: !Ref AppPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AppInternetGateway

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "xx"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AppVpc
  AppInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-383c1956
      InstanceType: t2.micro
      #SecurityGroupIds:
      #  - !GetAtt  AppSecurityGroup.GroupId
      #SubnetId: !Ref AppPublicSubnetA
      KeyName: !Ref KeyPair
      NetworkInterfaces:
        - DeviceIndex: "0"
          AssociatePublicIpAddress: true
          GroupSet:
            - !Ref AppSecurityGroup
          SubnetId: !Ref AppPublicSubnetA
